--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <meta name="description" content="" />
-    <title>Here Maps Api</title>
+    <title>Neighborhood</title>
     <link rel="stylesheet" type="text/css" href="/static/dist/bundle.css" />
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://js.api.here.com/v3/3.0/mapsjs-mapevents.js" type="text/javascript" charset="utf-8"></script>
+    <!-- <script src="http://js.api.here.com/v3/3.0/mapsjs-ui.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="http://js.api.here.com/v3/3.0/mapsjs-ui.css" /> -->
   </head>
   <body>
     <div id="main">
@@ -19,7 +21,7 @@
         <div class="side-bar-container"><ul class="side-bar"></ul></div>
       </div>
       <div id="navbar" class="nav-container sticky">
-        <a class="btn-info" href="#">Info</a>
+        <!-- <a class="btn-info" href="#">Info</a> -->
         <!-- <a class="nav-right logo" href="https://github.com/mstark5652" target="_blank"> -->
           <!-- <img class="github-logo" src="/static/images/github.svg" alt="Github logo" /> -->
         <!-- </a> -->
