--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -36,17 +36,19 @@ svg path {
 
 
 .side-bar-container {
-  margin-left: 0;
-  margin-top: $nav-height;
-  overflow: scroll;
-  width: 35%;
+  width: 100%;
   height: 100%;
   position: fixed;
   left: 0;
+  right: 0;
   top: 0;
+  bottom: 0;
+  margin: 0;
+  z-index: $zindex-back-drop;
   background-color: $light-background-color;
-  border: 1px solid transparent;
-  border-radius: 15px;
+  background-size: 100%;
+  background-position: 0;
+  background-repeat: no-repeat;
 }
 
 .side-bar {
@@ -59,30 +61,47 @@ svg path {
 }
 
 .map-container {
-  margin-left: 35%;
-  margin-top: $nav-height;
-  width: 65%;
-  height: 100%;
+  height: 200px;
+  width: 100%;
   position: fixed;
+  margin: 0;
   left: 0;
+  right: 0;
   top: 0;
+  bottom: 0;
+  z-index: $zindex-map-control;
   background-color: $light-accent-color;
-  border: 1px solid transparent;
-  border-radius: 15px;
+  background-size: 100%;
+  background-position: 0;
+  background-repeat: no-repeat;
+}
+.map-container.map-xlg {
+  height: 550px;
+}
+.map-container.map-lg {
+  height: 450px;
+}
+.map-container.map-sm {
+  height: 190px;
+}
+.map-container.map-no {
+  height: 0px;
 }
 
-@media #{$screen-s} {
-  .side-bar-container {
-    height: 35%;
-    width: 100%;
-    position: relative;
-    margin-top: 0;
-  }
+// @media #{$screen-s} {
+//   .side-bar-container {
+//     height: 35%;
+//     width: 100%;
+//     position: relative;
+//     margin-top: 0;
+//   }
 
-  .map-container {
-    height: 65%;
-    width: 100%;
-    margin-left: 0;
-    position: relative;
-  }
-}
+//   .map-container {
+//     height: 65%;
+//     width: 100%;
+//     margin-left: 0;
+//     position: relative;
+//   }
+// }
+
+
