--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -15,12 +15,17 @@ $light-accent-color: #FED89D;
 
 $header-color: #aaa;
 
-$nav-background-color: $primary-color-dark;//#555;
+$nav-background-color: transparent;//#555;
 $nav-title-color: $primary-color;
 $nav-text-color: $light-background-color;
 $nav-item-selected: $primary-color;
 $nav-item-hover: #aaa;
-$nav-height: 50px;
+$nav-height: 90px;
+
+
+//
+// background 306BAF
+//
 
 $login-form-size: 500px;
 
@@ -37,7 +42,10 @@ $font-size-nav-item: 16px;
  * zindex layers
  */
 
-$zindex-nav-control: 1800;
+$zindex-back-drop: 1500;
+$zindex-map-control: 1600;
+$zindex-nav-control: 1700;
+
 $zindex-notification-center: 1900;
 $zindex-notification-content: 1901;
 $zindex-loading: 2000;
