--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,12 +7,10 @@
     <meta name="description" content="" />
     <title>Neighborhood</title>
     <link rel="stylesheet" type="text/css" href="/static/dist/bundle.css" />
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
-    <script src="/static/dist/maps-core.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/static/dist/maps-service.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/static/dist/maps-mapevents.js" type="text/javascript" charset="utf-8"></script>
-    <!-- <script src="http://js.api.here.com/v3/3.0/mapsjs-ui.js" type="text/javascript" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="http://js.api.here.com/v3/3.0/mapsjs-ui.css" /> -->
+    <!-- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script> -->
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-mapevents.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <div id="main">
