--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -49,6 +49,7 @@ $zindex-nav-control: 1700;
 $zindex-notification-center: 1900;
 $zindex-notification-content: 1901;
 $zindex-loading: 2000;
+$zindex-splash: 2001;
 
 /*
  * Media Breakpoints
