--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -19,10 +19,11 @@
         <div class="side-bar-container"><ul class="side-bar"></ul></div>
       </div>
       <div id="navbar" class="nav-container sticky">
-        <!-- <a class="btn-info" href="#">Info</a> -->
-        <!-- <a class="nav-right logo" href="https://github.com/mstark5652" target="_blank"> -->
-          <!-- <img class="github-logo" src="/static/images/github.svg" alt="Github logo" /> -->
-        <!-- </a> -->
+      </div>
+      <div class="video-container">
+        <div class="holdVideo">
+          <video src="/static/media/intro.mp4" autoplay muted></video>
+        </div>
       </div>
       <div class="notification-center">
         <p class="notification-content"></p>
