--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="video-container">
         <div class="holdVideo">
-          <video src="/static/media/intro.mp4" autoplay muted></video>
+          <video src="/static/media/intro.mp4" autoplay playsinline muted></video>
         </div>
       </div>
       <div class="notification-center">
