--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -8,9 +8,9 @@
     <title>Neighborhood</title>
     <link rel="stylesheet" type="text/css" href="/static/dist/bundle.css" />
     <!-- <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script> -->
-    <script src="https://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js" type="text/javascript" charset="utf-8"></script>
+    <script src="//js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
+    <script src="//js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
+    <script src="//js.api.here.com/v3/3.0/mapsjs-mapevents.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <div id="main">
@@ -22,14 +22,14 @@
       </div>
       <div class="video-container">
         <div class="holdVideo">
-          <video src="/static/media/intro.mp4" autoplay playsinline muted></video>
+          <video src="https://s3.us-east-2.amazonaws.com/neighborhood-static/media/intro.mp4" autoplay playsinline muted></video>
         </div>
       </div>
       <div class="notification-center">
         <p class="notification-content"></p>
       </div>
       <div class="loading">
-        <img src="/static/images/loading.svg" alt="loading" />
+        <img src="https://s3.us-east-2.amazonaws.com/neighborhood-static/loading.svg" alt="loading" />
       </div>
     </div>
     <script src="/static/dist/bundle.js" type="text/javascript"></script>
